--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,6 +78,10 @@ h1 a img:hover {
     transform: scale(1.10);
 }
 
+img.main {
+    cursor: pointer;
+}
+
 div.liste_projets {
     border-bottom: 6px solid var(--Falu_red);
     display: flex;
