--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,7 @@ main h1 {
     margin: 10px 10px;
 }
 
+
 .description p {
     margin-left: 40px;
 }
@@ -200,4 +201,103 @@ svg {
 
 svg:hover {
     transform: scale(1.10);
+}
+
+.hamburger {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    position: relative;
+}
+
+.hamburger__line {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: var(--Light_yellow);
+    margin: 5px 0;
+}
+
+
+@media screen and (max-width: 1023px) {
+    p {
+        font-size: 16px;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    nav {
+        display: block;
+        position: fixed;
+        border-left: 5px solid var(--Falu_red);
+        top: 0;
+        right: 0;
+        transform: translateX(100%);
+        width: 200px;
+        height: 100%;
+        background-color: var(--Charcoal);
+        z-index: 1000;
+        transition: transform 0.5s ease;
+    }
+
+    nav ul {
+        list-style: none;
+    }
+
+    nav ul li {
+        margin-bottom: 20px;
+    }
+
+    nav ul li a {
+        text-decoration: none;
+        font-size: 18px;
+    }
+
+    nav.active {
+        transform: translateX(0);
+    }
+
+    div.projet img {
+        border-radius: 6px;
+        width: 100%;
+        height: 100%;
+    }
+
+    div.projet img:hover {
+        zoom: 105%;
+    }
+
+    div.projet {
+        border: 2px solid black;
+        border-radius: 6px;
+        margin: 10px;
+        width: 45%;
+        height: 45%;
+        aspect-ratio: 1;
+        box-shadow: 20px solid black;
+    }
+
+
+    div.projet:hover {
+        transform: scale(1.05);
+    }
+
+    div.projet_custom img {
+        border-radius: 6px;
+        width: inherit;
+        height: inherit;
+    }
+
+    div.projet_custom {
+        border: 2px solid black;
+        border-radius: 6px;
+        margin: 10px;
+        width: 1200px;
+        height: 300px;
+        box-shadow: 20px solid black;
+    }
 }
