Modif site phasmohelp

--- a/PhasmoHelp/css/styles.css
+++ b/PhasmoHelp/css/styles.css
@@ -81,3 +81,11 @@ ul.ul-help {
     padding: 0 0 0 20px;
     margin: 16px 4px;
 }
+
+a.portfolio {
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    width: 100%;
+}
