--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,11 +205,11 @@ footer a {
     margin: 10px 5px;
 }
 
-svg {
+footer svg {
     transition: transform 0.3s ease-in-out;
 }
 
-svg:hover {
+footer svg:hover {
     transform: scale(1.10);
 }
 
@@ -269,7 +269,8 @@ svg:hover {
         transform: translateX(0);
     }
 
-    div.projet img {
+    div.projet img,
+    div.projet svg {
         border-radius: 6px;
         width: 100%;
         height: 100%;
