--- a/styles/styles.css
+++ b/styles/styles.css
@@ -230,6 +230,12 @@ footer svg:hover {
     margin: 5px 0;
 }
 
+a#lienSitePhasmo {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    width: 100%;
+}
 
 @media screen and (max-width: 1023px) {
 
@@ -269,8 +275,7 @@ footer svg:hover {
         transform: translateX(0);
     }
 
-    div.projet img,
-    div.projet svg {
+    div.projet img {
         border-radius: 6px;
         width: 100%;
         height: 100%;
