ajout début jeu 'first try'

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,12 @@ html {
     color: var(--Light_yellow);
 }
 
+video {
+    width : 320px;
+    height: 180px;
+    margin : 20px;
+}
+
 body {
     background-color: var(--Charcoal);
     margin: 0;
