--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,8 +151,31 @@ div.projet {
     height: 300px;
     box-shadow: 20px solid black;
     transition: transform 0.3s ease-in-out;
+    display: none;
 }
 
+.projet.show {
+    display: block; /* S'affiche quand filtré */
+}
+
+.filters {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.filters button {
+    margin: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+    color: var(--Light_yellow);
+    background-color: var(--Charcoal);
+    border: 2px solid var(--Falu_red);
+    border-radius: 8px;
+}
+
+.filters button:hover {
+    color: var(--Light_yellow_hover);
+}
 
 div.projet:hover {
     transform: scale(1.05);
