--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 :root {
-    --Falu_red: #70281F;
+    --customWhite: #a6a6a6;
     --Light_yellow: #F8FFE5;
     --Light_yellow_hover: #f8ffe5a2;
-    --Charcoal: #2A3D45;
+    --Charcoal: #141b1e;
 }
 
 html {
-    color: var(--Light_yellow);
+    color: whitesmoke;
 }
 
 * {
@@ -30,7 +30,6 @@ video.big {
 
 body {
     background-color: var(--Charcoal);
-    background-image: url('https://www.transparenttextures.com/patterns/asfalt-light.png');
     margin: 0;
     font-size: 16px;
     font-family: 'Playfair Display',
@@ -55,19 +54,19 @@ a {
 }
 
 a:hover {
-    color: var(--Light_yellow_hover);
+    color: lightgray;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    border-bottom: 6px solid var(--Falu_red);
+    border-bottom: 6px solid var(--customWhite);
 }
 
 header.seul {
     display: flex;
     justify-content: center;
-    border-bottom: 6px solid var(--Falu_red);
+    border-bottom: 6px solid var(--customWhite);
 }
 
 header h1 {
@@ -117,7 +116,7 @@ img.main {
 }
 
 div.liste_projets {
-    border-bottom: 6px solid var(--Falu_red);
+    border-bottom: 6px solid var(--customWhite);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -132,11 +131,30 @@ div.liste_img_projets {
 }
 
 div.liste_compétences {
-    border-bottom: 6px solid var(--Falu_red);
+    border-bottom: 6px solid var(--customWhite);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: center;
+}
+
+div.img_compétences {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 5px white;
+    background-color: var(--customWhite);
+    margin: 20px;
+    padding: 40px;
+    border-radius: 700px;
+}
+
+div.img_compétences img {
+    width: 150px;
+    height: 150px;
+    margin: 0;
+    padding: 0;
 }
 
 div.projet img {
@@ -171,12 +189,12 @@ div.projet {
     cursor: pointer;
     color: var(--Light_yellow);
     background-color: var(--Charcoal);
-    border: 2px solid var(--Falu_red);
+    border: 2px solid var(--customWhite);
     border-radius: 8px;
 }
 
 .filters button:hover {
-    color: var(--Light_yellow_hover);
+    color: lightgray;
 }
 
 div.projet:hover {
@@ -210,11 +228,11 @@ div.projet_custom:hover {
 div.liste_actus {
     display: flex;
     flex-direction: column;
-    border-bottom: 6px solid var(--Falu_red);
+    border-bottom: 6px solid var(--customWhite);
 }
 
 p.actus {
-    text-decoration: underline var(--Falu_red);
+    text-decoration: underline var(--customWhite);
     display: flex;
     justify-content: center;
 }
@@ -223,7 +241,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 6px dotted var(--Falu_red);
+    border-top: 6px dotted var(--customWhite);
 }
 
 footer h1 {
@@ -315,6 +333,8 @@ iframe {
     animation: typing 3s steps(16, end) forwards, blink 0.7s infinite;
     animation-delay: 0s, 3s;
 }
+
+
   
 @keyframes typing {
   from {
@@ -341,7 +361,7 @@ iframe {
     nav {
         display: block;
         position: fixed;
-        border-left: 5px solid var(--Falu_red);
+        border-left: 5px solid var(--customWhite);
         top: 0;
         right: 0;
         transform: translateX(100%);
