ajout fond animé avec particule

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -340,7 +340,11 @@ iframe {
     animation-delay: 0s, 3s;
 }
 
-
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
   
 @keyframes typing {
   from {
