--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,7 +357,17 @@ div.firstTryMeca, div.firstTryLevel1 {
     border-top: 6px solid var(--customWhite);
     padding: 20px;
 }
-  
+
+div.resolution {
+    height: 1280px;
+    width: 720px;
+}
+
+div.resolution * {
+    width: 100%;
+    height: 100%;
+}
+
 @keyframes typing {
   from {
     width: 0;
