--- a/styles/styles.css
+++ b/styles/styles.css
@@ -358,14 +358,15 @@ div.firstTryMeca, div.firstTryLevel1 {
     padding: 20px;
 }
 
-div.resolution {
-    height: 1280px;
-    width: 720px;
+div.hachinosuPlay {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
 }
 
-div.resolution * {
-    width: 100%;
-    height: 100%;
+div.projects {
+    border-top: 6px solid var(--customWhite);
 }
 
 @keyframes typing {
